syntax = "proto3";

package entities;

option go_package = "entities/";

message Message {
    string Topic = 1;
    bytes Payload = 2;
    string DataType = 3;
}